# esp-idf-ble

./: Cargo.toml  README.md  sdkconfig.esp32c3
.cargo/: config.toml
src/: advertise.rs  gap.rs  lib.rs  security.rs
